// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home should render 1`] = `
<div
  className="root"
>
  <div>
    <h1
      className="heading"
    >
      Tic Tac Toe
    </h1>
  </div>
  <div>
    <Button
      className="button"
      disabled={false}
      onClick={[MockFunction]}
    >
      New Game
    </Button>
    <table>
      <tbody>
        <tr>
          <td>
            Games In Progress
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Games Finished
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Naught Wins
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Cross Wins
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Games Drawn
          </td>
          <td>
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Home should render loading indicator 1`] = `
<div
  className="root"
>
  <div>
    <h1
      className="heading glow"
    >
      Tic Tac Toe
    </h1>
  </div>
  <div>
    <Button
      className="button"
      disabled={true}
      onClick={[MockFunction]}
    >
      Loading...
    </Button>
    <table>
      <tbody>
        <tr>
          <td>
            Games In Progress
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Games Finished
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Naught Wins
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Cross Wins
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Games Drawn
          </td>
          <td>
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
